# Sentaku

./: .gitignore  .landscape.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  README.rst  catalog-info.yaml  conftest.py  default.nix  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonapp.yml
docs/: about.rst  api.rst  conf.py  example.rst  examples.rst  getting_started.rst  index.rst  requirements.txt  the_parts.rst
examples/: mini_example.py
examples/todo_example/: __init__.py  api.py  pseudorpc.py  spec.py  ux.py
src/sentaku/: __init__.py  chooser.py  context.py  implementation_handling.py  implementations_stack.py  legacy.py  modeling.py  utils.py
testing/: check_types.py  test_acceptance_by_exampple.py  test_context.py  test_implstack.py
testing/todo_example/: api.py  pseudorpc.py  spec.py  test_contextstates.py  ux.py
