[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "sentaku"
dynamic = [
  "version",
]
description = "variadic ux implementation for testing"
readme = "README.rst"
license = "MPL-2.0"
requires-python = ">=3.8"

keywords = [
  "testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
  "attrs>=22",
  "dectate>=0.12",
  "typing-extensions>=4.3",
]

[[project.authors]]
name = "RonnyPfannschmidt"
email = "opensource@ronnypfannschmidt.de"

[project.optional-dependencies]
docs = [
  "requests>=2.20",
  "selenium>=4",
  "sphinx>=6.1.3",
]
examples = [
  "selenium>4",
]
test = [
  "pytest>7.1",
]

[tool.hatch.version]
source = "vcs"

[project.urls]
Homepage = "https://github.com/Redhatqe/Sentaku"

[tool.hatch.envs.test]
features = ["test"]
[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.test.scripts]
test = "pytest {args}"

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = """
    sphinx-build -b html \
        -d build/sphinx-doctrees \
        docs build/htmldocs {args}
    """

[tool.hatch.envs.mypy]
features = ["test"]
dependencies = [
    "mypy==0.991",
    "types-requests",
    "pytest",
]
[tool.hatch.envs.mypy.scripts]
check = "mypy {args:src/sentaku testing examples}"

[tool.pytest.ini_options]
testpaths = ["./testing"]
pythonpath = ["./examples"]

[tool.mypy]
python_version="3.8"
strict = true
mypy_path = ["$MYPY_CONFIG_FILE_DIR/src", "$MYPY_CONFIG_FILE_DIR/examples"]

[[tool.mypy.overrides]]
module = ["dectate", "selenium.*"]
ignore_missing_imports=true


[tool.pyright]
include = ["src","examples", "testing"]
pythonVersion = "3.8"
