[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "sentaku"
description = "variadic ux implementation for testing"
readme = "README.rst"
keywords = [
  "testing",
]
license = "MPL-2.0"
authors = [
  { name = "RonnyPfannschmidt", email = "opensource@ronnypfannschmidt.de" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "attrs>=25",
  "typing-extensions>=4.5",
]
optional-dependencies.docs = [
  "requests>=2.20",
  "selenium>=4",
  "sphinx>=6.1.3",
]
optional-dependencies.examples = [
  "selenium>=4",
]
optional-dependencies.test = [
  "pytest>7.1",
]
urls.Homepage = "https://github.com/Redhatqe/Sentaku"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.test]
features = [ "test" ]

[[tool.hatch.envs.test.matrix]]
python = [ "3.12" ]

[tool.hatch.envs.test.scripts]
test = "pytest {args}"

[tool.hatch.envs.docs]
features = [ "docs" ]

[tool.hatch.envs.docs.scripts]
build = """
    sphinx-build -b html \
        -d build/sphinx-doctrees \
        docs build/htmldocs {args}
"""

[tool.hatch.envs.mypy]
features = [ "test" ]
dependencies = [
  "mypy==1.0.0",
  "types-requests",
  "pytest",
]

[tool.hatch.envs.mypy.scripts]
check = "mypy {args:src/sentaku testing examples}"

[tool.ruff]
target-version = "py312"
line-length = 88
src = [ "examples", "src" ]

lint.select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warnings
]
lint.isort.known-first-party = [ "sentaku" ]

[tool.pytest.ini_options]
testpaths = [ "./testing" ]
pythonpath = [ "./examples" ]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = [ "$MYPY_CONFIG_FILE_DIR/src", "$MYPY_CONFIG_FILE_DIR/examples" ]
overrides = [ { module = [ "selenium.*" ], ignore_missing_imports = true } ]
