[metadata]
name = sentaku
author = RonnyPfannschmidt
author_email = opensource@ronnypfannschmidt.de
description = variadic ux implementation for testing
long_description = file:README.rst
long_description_content_type = text/x-rst
license = MPLv2
keywords = testing
url = https://github.com/RonnyPfannschmidt/Sentaku
classifiers =
    Topic :: Utilities
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Development Status :: 4 - Beta

[options]
requires_python = >= 3.6
packages = sentaku
package_dir = =src
install_requires =
    attrs >= 19.0.0
    dectate >= 0.12

[options.extras_require]
test = pytest
examples = selenium
docs =
  sphinx
  requests
  selenium
